Merged Listener into main class. Updated pom with correct url and version.